--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<img id='img-ball' src='../assets/images/ball.png'>
+	<img id='img-brick' src='../assets/images/brick.png'>
 	<canvas id='gameScreen' width="800" height="600"></canvas>
   	<script src="../src/index.js"></script>
 </body>
